--- a/backend-express/package.json
+++ b/backend-express/package.json
@@ -15,6 +15,7 @@
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "express-async-handler": "^1.2.0",
+      "express-fileupload": "^1.4.0",
       "joi": "^17.9.2",
       "jsonwebtoken": "^9.0.0",
       "nodemailer": "^6.9.1",
@@ -23,12 +24,14 @@
       "pg-hstore": "^2.3.4",
       "reflect-metadata": "^0.1.13",
       "sequelize": "^6.31.1",
-      "sequelize-typescript": "^2.1.5"
+      "sequelize-typescript": "^2.1.5",
+      "sharp": "^0.32.1"
    },
    "devDependencies": {
       "@types/bcrypt": "^5.0.0",
       "@types/cors": "^2.8.13",
       "@types/express": "^4.17.17",
+      "@types/express-fileupload": "^1.4.1",
       "@types/jsonwebtoken": "^9.0.2",
       "@types/node": "^18.16.3",
       "@types/nodemailer": "^6.4.7",
