--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "client",
   "private": true,
   "version": "0.0.0",
   "proxy": "http://localhost:3100",
@@ -11,7 +11,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "-": "^0.0.1",
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.10.8",
@@ -22,7 +21,6 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
-    "D": "^1.0.0",
     "framer-motion": "^10.12.7",
     "joi": "^17.9.2",
     "moment": "^2.29.4",
@@ -32,7 +30,6 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.0",
-    "react-scrollable-feed": "^1.3.2",
     "sass": "^1.62.1",
     "socket.io-client": "^4.6.1",
     "uuid": "^9.0.0"
