--- a/socket/.env
+++ b/socket/.env
@@ -1,8 +1,8 @@
-DB_NAME=typeto_express
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=010596
-DB_PORT=5432
+POSTGRES_DB=typeto_express
+POSTGRES_HOST=localhost
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=010596
+POSTGRES_PORT=5432
 
 SOCKET_PORT=3200
 CLIENT_URL=http://localhost:5173
