--- a/socket/package.json
+++ b/socket/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf ./build && tsc",
+    "prod": "npm run build && node ./build/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +17,8 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.31.1",
     "sequelize-typescript": "^2.1.5",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "rimraf": "5.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
