--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
     command: npm run prod
     env_file:
       - socket/.env
+    ports:
+      - "3200:3200"
     environment:
       - POSTGRES_HOST=db
     restart: unless-stopped
